--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/appweb
 spring.datasource.username=postgres
-spring.datasource.password=Mafe2020
+spring.datasource.password=dasomacha
 server.port=8081
 spring.datasource.driver-class-name=org.postgresql.Driver
