--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Mafe2020
+spring.datasource.password=appweb
 server.port=8081
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
